--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -1,8 +1,9 @@
 .contactList {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
   gap: 10px;
-  justify-content: center;
-  list-style-type: none;
+  list-style: none;
   padding: 0;
+  margin: 0 auto;
+  max-width: 600px;
 }
