--- a/src/pages/LoginPage/LoginPage.module.css
+++ b/src/pages/LoginPage/LoginPage.module.css
@@ -1,21 +1,62 @@
 .loginContainer {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 400px;
-  margin: 0 auto;
+  justify-content: center;
+  width: 400px;
   padding: 20px;
-  border: 1px solid #ddd;
   border-radius: 8px;
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  background: rgba(255, 255, 255, 0.9); /* Фон у стилі HomePage */
+  color: #fff;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); /* Тінь для форми */
+}
+
+.login {
+  margin-bottom: 20px;
+  font-size: 2rem;
+  color: #333333b8;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
+  font-size: 3em;
+}
+
+.formContainer {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.formField {
+  margin-bottom: 15px;
+}
+
+label {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
+  color: #333; /* Білий текст */
+}
+
+.inputField {
+  width: calc(100% - 16px);
+  padding: 8px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+}
+
+.errorMessage {
+  color: red;
+  font-size: 12px;
 }
 
 .submitButton {
   padding: 10px;
   font-weight: bold;
-  background-color: #646cff;
-  color: white;
+  background-color: #ff4d4d;
+  color: #fff;
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -23,6 +64,33 @@
 }
 
 .submitButton:hover {
-  background-color: #535bf2;
+  background-color: #ff1a1a;
   transform: scale(1.05);
+}
+
+p {
+  color: #fff;
+  margin-top: 15px;
+  font-size: 1rem;
+}
+
+a {
+  color: #007bff;
+  background-color: #e7f0ff;
+  border-radius: 4px;
+  padding: 4px 8px;
+  text-decoration: none;
+  transition: background-color 0.3s, color 0.3s;
+}
+
+a:hover {
+  background-color: #0056b3;
+  color: #fff;
+  text-decoration: underline;
+}
+
+.linkTo {
+  color: #333333b8;
+  margin-top: 20px;
+  font-size: 1rem;
 }
