--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -1,9 +1,9 @@
+/* Contact.module.css */
 .contactItem {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 15px;
-  margin-bottom: 10px;
   background-color: #fff;
   border: 1px solid #ddd;
   border-radius: 8px;
@@ -16,13 +16,21 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
+.contactWrapper {
+  display: flex;
+  flex-direction: column; /* Розташування імені та номера контактів у стовпчику */
+  gap: 5px; /* Простір між іменем та номером */
+}
+
 .contactName {
   font-weight: bold;
   color: #333;
+  margin: 0;
 }
 
 .contactNumber {
   color: #555;
+  margin: 0;
 }
 
 .deleteButton {
@@ -33,6 +41,7 @@
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s, transform 0.3s;
+  margin-left: 40px;
 }
 
 .deleteButton:hover {
