--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -1,9 +1,10 @@
 .contactList {
   display: flex;
-  flex-direction: column;
   gap: 10px;
   list-style: none;
   padding: 0;
   margin: 0 auto;
   max-width: 600px;
+  margin-top: 30px;
+  flex-wrap: wrap;
 }
